--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "gulp": "~3.8.0",
     "gulp-nodemon": "~1.0.4",
     "gulp-uglify": "~0.3.0",
-    "gulp-concat": "~2.2.0"
+    "gulp-concat": "~2.2.0",
+    "nightwatch": "~0.5.6"
   },
   "dependencies": {
     "express": "~4.4.3",
