--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "gulp-nodemon": "~1.0.4",
     "gulp-uglify": "~0.3.0",
     "gulp-concat": "~2.2.0",
-    "nightwatch": "~0.5.6"
+    "nightwatch": "~0.5.6",
+    "gulp-minify-css": "~0.3.5",
+    "gulp-jshint": "~1.6.3",
+    "gulp-csslint": "~0.1.4"
   },
   "dependencies": {
     "express": "~4.4.3",
