--- a/package.json
+++ b/package.json
@@ -18,12 +18,13 @@
   "license": " ",
   "devDependencies": {
     "gulp": "~3.8.0",
-    "gulp-nodemon": "~1.0.4",
     "gulp-concat": "~2.2.0",
-    "nightwatch": "~0.5.6",
-    "gulp-minify-css": "~0.3.5",
+    "gulp-csslint": "~0.1.4",
     "gulp-jshint": "~1.6.3",
-    "gulp-csslint": "~0.1.4"
+    "gulp-minify-css": "~0.3.5",
+    "gulp-nodemon": "~1.0.4",
+    "nightwatch": "~0.5.6",
+    "selenium-server": "^2.43.1"
   },
   "dependencies": {
     "express": "~4.4.3",
